# opensearch

./: .gitignore  Cargo.toml  ecommerce-field_mappings.json  justfile  test.http
src/: api.rs  lib.rs  main.rs  opensearch_client.rs
