[package]
name = "open-search-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
opensearch = { version = "2.3.0", features = ["rustls-tls", "default", "native-tls"] }
serde = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1.42", features = ["full"] }
url = "2.5.4"
