[package]
name = "open-search-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
opensearch = { version = "2.3" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[lib]
path = "src/lib.rs"
